--- a/config/database.yml
+++ b/config/database.yml
@@ -13,12 +13,14 @@
 # gem 'pg'
 #
 development:
-  adapter: postgresql
+  adapter: postgis
   encoding: unicode
   database: prepared.ly_development
   pool: 5
   username: prepared.ly
   password:
+  schema_search_path: "public,postgis"
+  script_dir: /usr/local/share/postgis
 
   # Connect on a TCP socket. Omitted by default since the client uses a
   # domain socket that doesn't need configuration. Windows does not have
@@ -39,17 +41,20 @@ development:
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
-  adapter: postgresql
+  adapter: postgis
   encoding: unicode
   database: prepared.ly_test
   pool: 5
   username: prepared.ly
   password:
+  schema_search_path: "public,postgis"
+  script_dir: /usr/local/share/postgis
 
 production:
-  adapter: postgresql
+  adapter: postgis
   encoding: unicode
   database: prepared.ly_production
   pool: 5
   username: prepared.ly
   password:
+  schema_search_path: "public,postgis"
